--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
-Django==4.2.16
+dj-database-url==2.3.0
+Django==5.1.4
+gunicorn==23.0.0
+python-dotenv==1.0.1
 sqlparse==0.5.2
-gunicorn==20.1.0
-whitenoise==6.5.0
-django-heroku==0.3.1
-python-dotenv==1.0.0
+whitenoise==6.8.2
