--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
+black==24.10.0
+click==8.1.7
 dj-database-url==2.3.0
 Django==5.1.4
 gunicorn==23.0.0
+pathspec==0.12.1
 python-dotenv==1.0.1
 sqlparse==0.5.2
 whitenoise==6.8.2
